# soft_low

./: .gitignore  README.md  pyproject.toml
artifacts/: README.md
configs/: README.md
configs/analysis/: plan_a_artifacts.yaml  plan_a_next_v0_1_artifacts.yaml  plan_a_v0_3_artifacts.yaml  plan_a_v0_3debug_artifacts.yaml  plan_a_v0_3debug_r2_artifacts.yaml
configs/data/: cohort_schema_v0_1.yaml
configs/eval/: plan_a_matched_ambiguous_vs_ood.yaml  plan_a_next_v0_1_matched_manifest.yaml  plan_a_v0_3_matched_ambiguous_vs_ood.yaml  plan_a_v0_3debug_matched_ambiguous_vs_ood.yaml  plan_a_v0_3debug_r2_matched_ambiguous_vs_ood.yaml
configs/model/: frcnet_resnet18_base.yaml
configs/protocol/: plan_a_next_v0_1_analysis.yaml  plan_a_next_v0_1_train.yaml  plan_a_v0_3_eval.yaml  plan_a_v0_3_train.yaml  plan_a_v0_3_train_augmented.yaml  plan_a_v0_3debug_eval.yaml  plan_a_v0_3debug_r2_eval.yaml  plan_a_v0_3debug_r2_train.yaml  plan_a_v0_3debug_train.yaml  plan_a_v0_3debug_train_augmented.yaml  plan_a_v1.yaml  plan_a_v1_train.yaml
configs/study/: plan_a_v0_3_study.yaml  plan_a_v0_3debug_r2_study.yaml  plan_a_v0_3debug_study.yaml
configs/train/: loss_weights_base.yaml  plan_a_train_base.yaml  plan_a_v0_3_curriculum.yaml  plan_a_v0_3debug_curriculum.yaml  (+1 more)
docs/: index.md
notebooks/: README.md
records/experiments/: README.md
scripts/: README.md  aggregate_plan_a_study.py  build_plan_a_manifest.py  generate_plan_a_artifacts.py  prepare_plan_a_data.py  run_plan_a_experiment.py  run_plan_a_inference.py  run_plan_a_study.py  train_plan_a.py
tests/: README.md  conftest.py
(+71 files in other folders)
